$Id$

2020-10-06  Christian Franke  <franke@computer.org>

	Remove all occurrences of the throw() specifier.
	This specifier is deprecated since C++11.

2020-09-27  Christian Franke  <franke@computer.org>

	update-smart-drivedb.in: Add '--branch' option.
	Select signing key accordingly.
	update-smart-drivedb.8.in: Document new option.

2020-09-20  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron BX/MX1/2/3/500, M5/600, 11/1300 SSDs: BX500 2TB,
	  1100 with version suffix (#1178), 1300 without prefix (#1369).
	- Micron 5100 Pro / 52x0 / 5300 SSDs: Add attribute 246.
	- Phison Driven SSDs: Kingston A400 M.2 (#1362),
	  Kingston OCP0S3* (#1370), Kingston OM8P0* (#1371).
	- Kingston SSDNow UV400/500: UV500 M.2 (#1347).
	- SAMSUNG SpinPoint N3U-3 (USB): Rename.
	- USB: Samsung S1 Mini (0x04e8:0x2f06) (Debian Bug 964032).

2020-09-19  Christian Franke  <franke@computer.org>

	ataprint.cpp: Report unavailable TRIM command only for SSDs.

2020-08-23  Christian Franke  <franke@computer.org>

	drivedb.h: DEFAULT entry: Limit attribute 231 (Temperature_Celsius)
	to HDDs.  Various SSDs use this attribute for a different purpose.

	drivedb.h:
	- Micron 5100 Pro / 52x0 / 5300 SSDs: Rename, add 5210 (#1356),
	  5300 *TDT variant (#1355)
	- Phison Driven SSDs: SSD Smartbuy 64GB and other sizes (#1359)
	- Indilinx Barefoot_2/Everest/Martini based SSDs: OCZ-OCTANE (#1360)
	- Marvell based SanDisk SSDs: Ultra 3D 4TB (#1358)
	- Silicon Motion based SSDs: ACPI SED2QII-LP, Transcend 230
	- Western Digital Gold: WD102KRYZ (#1357)

2020-08-22  Christian Franke  <franke@computer.org>

	smartd.service.in: Don't start smartd in virtualized environments
	(GH issues/62).

2020-08-22  Marko Hauptvogel  <marko.hauptvogel@googlemail.com>

	smartd.service.in: Remove obsolete 'StandardOutput=syslog'.

2020-07-11  Christian Franke  <franke@computer.org>

	scsiprint.cpp: Add JSON values 'power_on_time.{hours,minutes}' to